switching to jdbc template