@@ -1,11 +1,10 @@
 package com.rewardapp.backend.services;
 
+import com.rewardapp.backend.dao.UserDAO;
 import com.rewardapp.backend.entities.EmailToken;
 import com.rewardapp.backend.entities.Session;
-import com.rewardapp.backend.entities.User;
 import com.rewardapp.backend.repositories.EmailTokenRepository;
 import com.rewardapp.backend.repositories.SessionRepository;
-import com.rewardapp.backend.repositories.UserRepository;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.scheduling.annotation.Scheduled;
@@ -14,18 +13,17 @@ import org.springframework.stereotype.Service;
 import java.sql.Timestamp;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class MaintenanceService {
     private static final Logger logger = LoggerFactory.getLogger(MaintenanceService.class);
     private final EmailTokenRepository emailTokenRepository;
-    private final UserRepository userRepository;
+    private final UserDAO userDAO;
     private final SessionRepository sessionRepository;
 
-    private MaintenanceService(EmailTokenRepository emailTokenRepository, UserRepository userRepository, SessionRepository sessionRepository) {
+    private MaintenanceService(EmailTokenRepository emailTokenRepository, UserDAO userDAO, SessionRepository sessionRepository) {
         this.emailTokenRepository = emailTokenRepository;
-        this.userRepository = userRepository;
+        this.userDAO = userDAO;
         this.sessionRepository = sessionRepository;
     }
 
@@ -41,16 +39,14 @@ public class MaintenanceService {
                 String.format("Deleted %d expired email tokens.", emailTokens.size())
         );
 
-        List<User> users = userRepository
-                .deleteUsersByIdInAndVerified(emailTokens
-                                .stream()
-                                .map(x -> x.getUserId())
-                                .distinct()
-                                .collect(Collectors.toList()),
-                        false);
+        Integer deleted_users = userDAO.deleteUnverifiedUsersFrom(emailTokens
+                .stream()
+                .map(x -> x.getUserId())
+                .distinct()
+                .toList());
 
         logger.info(
-                String.format("Deleted %d unverified users.", users.size())
+                String.format("Deleted %d unverified users.", deleted_users)
         );
 
         logger.info("Scheduler task \"purgeUnverifiedUsers()\" finalized.");
